style.css
body {
  display: flex;
  justify-content: center;
  font-family: 'Inconsolata', monospace;
  font-size: 1.5rem;
  background-color: #20252b;
}

#app {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: center;
  color: #fff;
  margin-top: 60px;
  max-width: 550px;
}

#app a {
  color: #fff;
}

#app ul {
  list-style-type: none;
  display: flex;
  justify-content: center;
  gap: 1rem;
}

